--- a/static/style.css
+++ b/static/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background: url('https://sacmi.com/SacmiCorporate/media/Corporate/Default%20Pict/CTLC_linea-completa-(2).jpg') no-repeat center center fixed;
+    background: url('https://github.com/Adeen317/License-Plate-Recognition-System/blob/main/static/image.jpg?raw=true') no-repeat center center fixed;
     background-size: cover;
     color: #ffffff;
     margin: 0;
@@ -16,6 +16,18 @@ body {
     z-index: 1000;
 }
 
+.navbar-transparent {
+    background: transparent !important;
+    border: none;
+}
+.navbar-dark .navbar-nav .nav-link {
+    color: rgba(255, 255, 255, 0.75);
+}
+.navbar-dark .navbar-nav .nav-link:hover,
+.navbar-dark .navbar-nav .nav-link:focus {
+    color: rgba(255, 255, 255, 1);
+}
+
 .navbar-brand {
     font-size: 28px;
     color: #ffffff !important;
@@ -25,7 +37,7 @@ body {
 .nav-link {
     font-size: 18px;
     border-radius: 25px;
-    padding: 5px 15px;
+    padding: 5px 30px;
     color: #ffffff !important;
     transition: background-color 0.3s, color 0.3s;
 }
